--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY=
-HUGGINGFACE_HUB_API=
+OPENAI_API_KEY="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"
+HUGGINGFACE_HUB_API="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"
